<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:gravity="center"
    tools:context=".StudentActivity">

    <EditText
        android:id="@+id/etNpm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/npm"
        android:inputType="number"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/etIpk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ipk"
        android:inputType="numberDecimal"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btSend1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_with_intent"/>

    <Button
        android:id="@+id/btSend2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_with_intent_parcelable"/>

    <Button
        android:id="@+id/btDial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call"/>
</LinearLayout>