<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etNumber1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_number"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/etNumber2"
        android:hint="@string/second_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btMul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_weight="1"/>
    </LinearLayout>


    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textStyle="bold"/>
</LinearLayout>